--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MERN Blog</title>
+    <link rel="icon" type="image/x-ixon" href="src/assets/images.png" />
+    <title>Today's News</title>
   </head>
   <body>
     <div id="root"></div>
